Resolves #640 Do not display shipping infos for grouped products in product lists

--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBoxList.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBoxList.cshtml
@@ -81,11 +81,10 @@
                     {
                         if ((!String.IsNullOrEmpty(Model.DeliveryTimeName) && !String.IsNullOrEmpty(Model.DeliveryTimeHexValue)) && Model.IsShipEnabled)
                         {
-                            <tr class="delivery-time">
+                            <tr class="delivery-time@(Model.InvisibleDeliveryTime ? " hide" : "")">
                                 <td class="attr-label">
                                     <span><strong>@T("Products.DeliveryTime")</strong></span>
                                 </td>
-                                    
 
                                 @if(Model.DisplayDeliveryTimeAccordingToStock)
                                 {
