--- a/src/Presentation/SmartStore.Web/Views/Common/StoreThemeSelector.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/StoreThemeSelector.cshtml
@@ -2,7 +2,7 @@
 @using SmartStore.Web.Models.Common;
 @if (Model.AvailableStoreThemes.Count > 1)
 {
-    using (Ajax.BeginForm("StoreThemeSelected", "Common", null, new AjaxOptions { OnComplete = "onStoreThemeChangedRequestCompleted();" }, new { id = "form-store-theme-selector" }))
+	using (Ajax.BeginForm("ChangeTheme", "Common", null, new AjaxOptions { OnComplete = "onStoreThemeChangedRequestCompleted();" }, new { id = "form-store-theme-selector" }))
     {
         var themes = Model.AvailableStoreThemes.Select(x => new SelectListItem
         {
@@ -11,7 +11,7 @@
             Selected = x.Name.Equals(Model.CurrentStoreTheme.Name, StringComparison.InvariantCultureIgnoreCase)
         });
     
-        @T("StoreTheme")<text>:</text> @Html.DropDownList("themeName", themes, new { @class = "store-theme-list noskin" })
+        @Html.DropDownList("themeName", themes, new { @class = "store-theme-list noskin" })
     }
     <script type="text/javascript">
         $(document).ready(function () {
