Fixed issue with self-updating URLAlias while editing products

--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.cshtml
@@ -109,8 +109,12 @@
 	x.Add().Text(T("Admin.Common.SEO").Text)
 		.Icon("fa fa-search fa-lg fa-fw")
 		.LinkHtmlAttributes(new { data_tab_name = "SEO" })
-		.Action("LoadEditTab", "Product", new { id = Model.Id, tabName = "SEO" })
-		.Ajax();
+		.Content(Html.Partial("_CreateOrUpdate.SEO", Model).ToHtmlString());	
+	//x.Add().Text(T("Admin.Common.SEO").Text)
+	//	.Icon("fa fa-search fa-lg fa-fw")
+	//	.LinkHtmlAttributes(new { data_tab_name = "SEO" })
+	//	.Action("LoadEditTab", "Product", new { id = Model.Id, tabName = "SEO" })
+	//	.Ajax();
 	x.Add().Text(T("Admin.Catalog.Products.Acl").Text)
 		.Icon("fa fa-users fa-lg fa-fw")
 		.LinkHtmlAttributes(new { data_tab_name = "Acl" })
