--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
@@ -211,7 +211,13 @@
 	<div class="modal hide fade" tabindex="-1">
 		<div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal"><b>x</b></button>
-			<h4 class="caption">@T("Admin.Common.License")</h4>
+			<h4 class="caption">
+				@T("Admin.Common.License")
+				@if (Model.IsLicensingSandbox)
+				{
+					<span class="label label-warning">Sandbox!</span>
+				}
+			</h4>
 		</div>
 		<div class="modal-body"></div>
 		<div class="modal-footer">
