--- a/src/Presentation/SmartStore.Web/Administration/Views/Home/About.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Home/About.cshtml
@@ -31,25 +31,12 @@
 		<ul class="work-list">
 			<li>
 				<div class="name">
-					<a href="http://51degrees.mobi/" rel="nofollow" target="AboutTargetWin">51Degrees</a>
-				</div>
-				<div class="copyright">
-					Copyright 2010 - 2013 51Degrees.mobi Limited
-				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/Mozilla_Public_License" rel="nofollow" target="AboutTargetWin">Mozilla Public License 2.0 (MPL-2.0)</a>
-				</div>
-			</li>
-			<li>
-				<div class="name">
 					<a href="http://www.antlr.org/" rel="nofollow" target="AboutTargetWin">ANTLR</a>
 				</div>
 				<div class="copyright">
 					Copyright ANTLR / Terence Parr 2014
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/BSD_licenses" rel="nofollow" target="AboutTargetWin">BSD</a>
-				</div>
+				@BSDLicense()
 			</li>
 			<li>
 				<div class="name">
@@ -58,9 +45,7 @@
 				<div class="copyright">
 					Copyright &copy; 2008-2011 Microsoft Corporation
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://go.microsoft.com/fwlink/?LinkID=207621" rel="nofollow" target="AboutTargetWin">MICROSOFT ASP.NET MODEL VIEW CONTROLLER 3 EULA</a>
-				</div>
+				@MVCEULA()
 			</li>
 			<li>
 				<div class="name">
@@ -69,9 +54,7 @@
 				<div class="copyright">
 					Copyright &copy; 2007-2008 <a href="http://code.google.com/p/autofac/wiki/Contributing" rel="nofollow" target="AboutTargetWin">Autofac Contributors</a>
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/MIT_License" rel="nofollow" target="AboutTargetWin">MIT</a>
-				</div>
+				@MITLicense()
 			</li>
 			<li>
 				<div class="name">
@@ -80,9 +63,7 @@
 				<div class="copyright">
 					Copyright &copy; 2008-2013 Jimmy Bogard and other contributors
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/MIT_License" rel="nofollow" target="AboutTargetWin">MIT</a>
-				</div>
+				@MITLicense()
 			</li>
 			<li>
 				<div class="name">
@@ -91,9 +72,16 @@
 				<div class="copyright">
 					Copyright Andrey Taritsyn 2014
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/Apache_License" rel="nofollow" target="AboutTargetWin">Apache License 2.0</a>
+				@Apache2License()
+			</li>
+			<li>
+				<div class="name">
+					<a href="http://ckeditor.com/" rel="nofollow" target="AboutTargetWin">CKEditor</a>
 				</div>
+				<div class="copyright">
+					&copy 2014 CKSource - Frederico Knabben
+				</div>
+				@LGPLLicense()
 			</li>
 			<li>
 				<div class="name">
@@ -102,9 +90,7 @@
 				<div class="copyright">
 					Copyright &copy; 2011, Outercurve Foundation
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://opensource.org/licenses/MS-PL" rel="nofollow" target="AboutTargetWin">MS-PL</a>
-				</div>
+				@MSPLLicense()
 			</li>
 			<li>
 				<div class="name">
@@ -113,9 +99,7 @@
 				<div class="copyright">
 					
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://opensource.org/licenses/MS-PL" rel="nofollow" target="AboutTargetWin">MS-PL</a>
-				</div>
+				@MSPLLicense()
 			</li>
 			<li>
 				<div class="name">
@@ -124,9 +108,7 @@
 				<div class="copyright">
 					Copyright &copy; 2012-2014 Microsoft Corporation
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/Apache_License" rel="nofollow" target="AboutTargetWin">Apache License 2.0</a>
-				</div>
+				@Apache2License()
 			</li>
 			<li>
 				<div class="name">
@@ -135,9 +117,7 @@
 				<div class="copyright">
 					Copyright &copy; 2011 Jan Källman
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/GNU_Lesser_General_Public_License" rel="nofollow" target="AboutTargetWin">GNU Lesser General Public License (LGPL)</a>
-				</div>
+				@LGPLLicense()
 			</li>
 			<li>
 				<div class="name">
@@ -146,9 +126,7 @@
 				<div class="copyright">
 					
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/Apache_License" rel="nofollow" target="AboutTargetWin">Apache License 2.0</a>
-				</div>
+				@Apache2License()
 			</li>
 			<li>
 				<div class="name">
@@ -157,9 +135,7 @@
 				<div class="copyright">
 					
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/Apache_License" rel="nofollow" target="AboutTargetWin">Apache License 2.0</a>
-				</div>
+				@Apache2License()
 			</li>
 			<li>
 				<div class="name">
@@ -168,9 +144,7 @@
 				<div class="copyright">
 					Copyright &copy; 2014 <a href="http://getglimpse.com/Community" rel="nofollow" target="AboutTargetWin">Glimpse contributors</a>
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/Apache_License" rel="nofollow" target="AboutTargetWin">Apache License 2.0</a>
-				</div>
+				@Apache2License()
 			</li>
 			<li>
 				<div class="name">
@@ -179,9 +153,7 @@
 				<div class="copyright">
 					Copyright &copy; 2012 Imazen
 				</div>
-				<div class="license">
-					<span>@(license):</span> Freedom License
-				</div>
+				@FreedomLicense()
 			</li>
 			<li>
 				<div class="name">
@@ -190,9 +162,7 @@
 				<div class="copyright">
 					Copyright Andrey Taritsyn 2014
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/Apache_License" rel="nofollow" target="AboutTargetWin">Apache License 2.0</a>
-				</div>
+				@Apache2License()
 			</li>
 			<li>
 				<div class="name">
@@ -201,9 +171,7 @@
 				<div class="copyright">
 					Copyright &copy; 2010 <a href="http://jquery.com/" rel="nofollow" target="AboutTargetWin">John Resig</a>
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/MIT_License" rel="nofollow" target="AboutTargetWin">MIT</a>
-				</div>
+				@MITLicense()
 			</li>
 			<li>
 				<div class="name">
@@ -212,9 +180,7 @@
 				<div class="copyright">
 					Copyright &copy; 2010 <a href="http://jqueryui.com/about" rel="nofollow" target="AboutTargetWin">lib/jquery.ui/AUTHORS.txt</a>
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/MIT_License" rel="nofollow" target="AboutTargetWin">MIT</a>
-				</div>
+				@MITLicense()
 			</li>
 			<li>
 				<div class="name">
@@ -223,9 +189,7 @@
 				<div class="copyright">
 					Copyright &copy; 2007-2009 Ariel Flesler
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/MIT_License" rel="nofollow" target="AboutTargetWin">MIT</a>
-				</div>
+				@MITLicense()
 			</li>
 			<li>
 				<div class="name">
@@ -234,20 +198,7 @@
 				<div class="copyright">
 					Copyright &copy; 2007 James Newton-King
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/MIT_License" rel="nofollow" target="AboutTargetWin">MIT</a>
-				</div>
-			</li>
-			<li>
-				<div class="name">
-					<a href="http://www.dotlesscss.org/" rel="nofollow" target="AboutTargetWin">LESS CSS for .NET</a>
-				</div>
-				<div class="copyright">
-					
-				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/Apache_License" rel="nofollow" target="AboutTargetWin">Apache License 2.0</a>
-				</div>
+				@MITLicense()
 			</li>
 			<li>
 				<div class="name">
@@ -256,9 +207,7 @@
 				<div class="copyright">
 					Copyright &copy; 2014 Maxmind
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://creativecommons.org/licenses/by-sa/3.0/" rel="nofollow" target="AboutTargetWin">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>
-				</div>
+				@CreativeCommonsLicense()
 			</li>
 			<li>
 				<div class="name">
@@ -267,9 +216,7 @@
 				<div class="copyright">
 					Copyright &copy; 2011 Microsoft Corporation
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://www.microsoft.com/web/webpi/eula/SQLCE_EULA_ENU.rtf" rel="nofollow" target="AboutTargetWin">Custom EULA</a>
-				</div>
+				@SqlCeEULA()
 			</li>
 			<li>
 				<div class="name">
@@ -278,9 +225,7 @@
 				<div class="copyright">
 					
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/Apache_License" rel="nofollow" target="AboutTargetWin">Apache License 2.0</a>
-				</div>
+				@Apache2License()
 			</li>
 			<li>
 				<div class="name">
@@ -289,9 +234,7 @@
 				<div class="copyright">
 					
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/MIT_License" rel="nofollow" target="AboutTargetWin">MIT</a>
-				</div>
+				@MITLicense()
 			</li>
 			<li>
 				<div class="name">
@@ -300,9 +243,7 @@
 				<div class="copyright">
 					Copyright 2010-2011 Outercurve Foundation
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/Apache_License" rel="nofollow" target="AboutTargetWin">Apache License 2.0</a>
-				</div>
+				@Apache2License()
 			</li>
 			<li>
 				<div class="name">
@@ -312,9 +253,7 @@
 					Copyright &copy; 2002-2007 NUnit.org<br />
 					Portions Copyright &copy; 2002-2008 Charlie Poole or Copyright &copy; 2002-2004 James W. Newkirk, Michael C. Two, Alexei A. Vorontsov or Copyright &copy; 2000-2002 Philip A. Craig
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://nunit.org/index.php?p=license&r=2.4" rel="nofollow" target="AboutTargetWin">Derived from zlib</a>
-				</div>
+				@zlibLicense()
 			</li>
 			<li>
 				<div class="name">
@@ -323,20 +262,7 @@
 				<div class="copyright">
 					
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/GNU_General_Public_License" rel="nofollow" target="AboutTargetWin">GPL 3.0</a>
-				</div>
-			</li>
-			<li>
-				<div class="name">
-					<a href="http://ckeditor.com/" rel="nofollow" target="AboutTargetWin">CKEditor</a>
-				</div>
-				<div class="copyright">
-					&copy 2014 CKSource - Frederico Knabben
-				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/GNU_Lesser_General_Public_License" rel="nofollow" target="AboutTargetWin">LGPL 2.1</a>
-				</div>
+				@GPLv3License()
 			</li>
 			<li>
 				<div class="name">
@@ -345,9 +271,16 @@
 				<div class="copyright">
 					
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://www.gnu.org/licenses/gpl.html" rel="nofollow" target="AboutTargetWin">GPL 3.0</a>
+				@GPLv3License()
+			</li>
+			<li>
+				<div class="name">
+					<a href="https://github.com/ua-parser/uap-csharp" rel="nofollow" target="AboutTargetWin">ua_parser C# Library</a>
 				</div>
+				<div class="copyright">
+					&copy 2012 Søren Enemærke
+				</div>
+				@Apache2License()
 			</li>
 			<li>
 				<div class="name">
@@ -356,9 +289,7 @@
 				<div class="copyright">
 					Copyright &copy; 2009-2014 Jeremy Ashkenas, DocumentCloud and Investigative Reporters & Editors
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="http://en.wikipedia.org/wiki/MIT_License" rel="nofollow" target="AboutTargetWin">MIT</a>
-				</div>
+				@MITLicense()
 			</li>
 			<li>
 				<div class="name">
@@ -367,10 +298,92 @@
 				<div class="copyright">
 
 				</div>
-				<div class="license">
-					<span>@(license):</span> <a href="https://www.gnu.org/licenses/lgpl.html" rel="nofollow" target="AboutTargetWin">LGPL</a>
-				</div>
+				@LGPLLicense()
 			</li>
 		</ul>
 	</p>
 </div>
+
+@helper MPL20License() 
+{
+	<div class="license">
+		<span>@T("Admin.Common.License"):</span> <a href="http://en.wikipedia.org/wiki/Mozilla_Public_License" rel="nofollow" target="AboutTargetWin">Mozilla Public License 2.0 (MPL-2.0)</a>
+	</div>
+}
+
+@helper BSDLicense()
+{
+	<div class="license">
+		<span>@T("Admin.Common.License"):</span> <a href="http://en.wikipedia.org/wiki/BSD_licenses" rel="nofollow" target="AboutTargetWin">BSD</a>
+	</div>
+}
+
+@helper MVCEULA()
+{
+	<div class="license">
+		<span>@T("Admin.Common.License"):</span> <a href="http://go.microsoft.com/fwlink/?LinkID=207621" rel="nofollow" target="AboutTargetWin">MICROSOFT ASP.NET MODEL VIEW CONTROLLER 3 EULA</a>
+	</div>
+}
+
+@helper MITLicense()
+{
+	<div class="license">
+		<span>@T("Admin.Common.License"):</span> <a href="http://en.wikipedia.org/wiki/MIT_License" rel="nofollow" target="AboutTargetWin">MIT</a>
+	</div>
+}
+
+@helper Apache2License()
+{
+	<div class="license">
+		<span>@T("Admin.Common.License"):</span> <a href="http://en.wikipedia.org/wiki/Apache_License" rel="nofollow" target="AboutTargetWin">Apache License 2.0</a>
+	</div>
+}
+
+@helper MSPLLicense()
+{
+	<div class="license">
+		<span>@T("Admin.Common.License"):</span> <a href="http://opensource.org/licenses/MS-PL" rel="nofollow" target="AboutTargetWin">MS-PL</a>
+	</div>
+}
+
+@helper LGPLLicense()
+{
+	<div class="license">
+		<span>@T("Admin.Common.License"):</span> <a href="http://en.wikipedia.org/wiki/GNU_Lesser_General_Public_License" rel="nofollow" target="AboutTargetWin">GNU Lesser General Public License (LGPL)</a>
+	</div>
+}
+
+@helper FreedomLicense()
+{
+	<div class="license">
+		<span>@T("Admin.Common.License"):</span> Freedom License
+	</div>
+}
+
+@helper zlibLicense()
+{
+	<div class="license">
+		<span>@T("Admin.Common.License"):</span> <a href="http://nunit.org/index.php?p=license&amp;r=2.4" rel="nofollow" target="AboutTargetWin">Derived from zlib</a>
+	</div>
+}
+
+@helper GPLv3License()
+{
+	<div class="license">
+		<span>@T("Admin.Common.License"):</span> <a href="http://en.wikipedia.org/wiki/GNU_General_Public_License" rel="nofollow" target="AboutTargetWin">GPL 3.0</a>
+	</div>
+}
+
+@helper CreativeCommonsLicense()
+{
+	<div class="license">
+		<span>@T("Admin.Common.License"):</span> <a href="http://creativecommons.org/licenses/by-sa/3.0/" rel="nofollow" target="AboutTargetWin">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>
+	</div>
+}
+
+@helper SqlCeEULA()
+{
+	<div class="license">
+		<span>@T("Admin.Common.License"):</span> <a href="http://www.microsoft.com/web/webpi/eula/SQLCE_EULA_ENU.rtf" rel="nofollow" target="AboutTargetWin">Custom EULA</a>
+	</div>
+}
