--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/_AdminLayout.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/_AdminLayout.cshtml
@@ -58,6 +58,11 @@
         <div class="cph">
             @RenderBody()
         </div>
+		<div id="ajax-busy">
+			<div class="bar"></div>
+			<div class="bar"></div>
+			<div class="bar"></div>
+		</div>
     </div>
     @Html.Widget("admin_content_after")
 
