--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/List.cshtml
@@ -23,6 +23,7 @@
 					<span class="fa fa-caret-down"></span>
 				</a>
 				<ul class="dropdown-menu">
+					@Html.Widget("admin_menu_exportorders_top")
 					<li>
 						<a href="@Url.Action("ExportXmlAll")">
 							<i class="fa fa-fw fa-code"></i>
@@ -60,6 +61,7 @@
 							@T("Admin.Common.ExportToPdf.Selected")
 						</a>
 					</li>
+					@Html.Widget("admin_menu_exportorders_bottom")
 				</ul>
 			</div>
         </div>
