--- a/src/Presentation/SmartStore.Web/Administration/Views/RecurringPayment/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/RecurringPayment/Edit.cshtml
@@ -12,8 +12,7 @@
         <div class="options">
             <button type="submit" name="save" value="save" class="btn btn-primary"><i class="fa fa-check"></i>&nbsp;@T("Admin.Common.Save")</button>
             <button type="submit" name="save" value="save-continue" class="btn">@T("Admin.Common.SaveContinue")</button>
-            <button type"submit" name="payment-delete" id="payment-delete" value="payment-delete" class="btn btn-danger"><i class="fa fa-trash-o"></i>&nbsp;>@T("Admin.Common.Delete")</button>
-            
+            <button type="submit" name="payment-delete" id="payment-delete" value="payment-delete" class="btn btn-danger"><i class="fa fa-trash-o"></i>&nbsp;@T("Admin.Common.Delete")</button>
         </div>
     </div>
     @Html.Partial("_CreateOrUpdate", Model)
