Refactored 'Instant Search'. Also fixed a bug where the box did not display all results when SQL Fulltext Search was enabled.

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/shopbar.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/shopbar.less
@@ -52,17 +52,17 @@
 	padding: 8px 0;
 }
 
-#quicksearch {
+#instantsearch {
 	width: 250px;
 }
 
 @media (min-width: 1200px) {	
-	#quicksearch {
+	#instantsearch {
 		width: 450px;
 	}
 }
 
-#quicksearch-progress {
+#instantsearch-progress {
 	position: absolute;
 	right: 45px;
 	top: 50%;
