--- a/src/Presentation/SmartStore.Web/Views/Catalog/SearchBox.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/SearchBox.Mobile.cshtml
@@ -1,8 +1,8 @@
 ﻿<div class="search-box">
     @using (Html.BeginRouteForm("ProductSearch", FormMethod.Get))
-    {
-        <label for="quicksearch" class="ui-hidden-accessible">@T("Search"):</label>
-        <input type="search" name="q" id="quicksearch"  placeholder="@T("Search.SearchBox.Tooltip")"  />
+	{
+		<label for="instantsearch" class="ui-hidden-accessible">@T("Search"):</label>
+		<input type="search" name="q" id="instantsearch" placeholder="@T("Search.SearchBox.Tooltip")" />
         @Html.Widget("mobile_searchbox")
     }
 </div>
