* Perf: most dependencies in public CommonController are Lazy<T> now * robots.txt now includes an entry for sitemap.xml * ContentSlider: added 'alt' attribute to images

--- a/src/Presentation/SmartStore.Web/Views/Home/ContentSlider.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Home/ContentSlider.cshtml
@@ -79,7 +79,7 @@
 
                         @if (!String.IsNullOrEmpty(@slide.PictureUrl))
                         {
-                            <div class="picture"><img src="@Url.Content(slide.PictureUrl)" /></div>
+                            <div class="picture"><img src="@Url.Content(slide.PictureUrl)" alt="@slide.Title" /></div>
                         }
 		            </li>
                 }
